fixed some spacing, added the enclave as a sponsor

--- a/site-css/sass/app.scss
+++ b/site-css/sass/app.scss
@@ -51,6 +51,18 @@
   display: inline-table;
 }
 
+.pysprings-sponsor ul {
+  list-style-type: none;
+}
+
+.pysprings-sponsor ul li {
+  display: inline-table;
+}
+
+.pysprings-sidebar h2 {
+  padding: 30px 0px 0px 0px;
+}
+
 body{
   //background: lighten($bannerDark, 10%);
   background: white;
